<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".ACTIVITY.LOGIN.LoginActivity">
    <ImageView
        android:src="@drawable/ic_logo_manager_employee"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/HintEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtUser"
                android:hint="@string/User"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_user_login"
                android:drawablePadding="5dp"
                android:paddingLeft="10dp"
                android:background="@drawable/bg_edittext_login"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@android:color/white"
            app:hintTextAppearance="@style/HintEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPassword"
                android:hint="@string/Password"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_margin="5dp"
                android:drawableLeft="@drawable/ic_password_login"
                android:drawablePadding="5dp"
                android:paddingLeft="10dp"
                android:background="@drawable/bg_edittext_login"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/chkRemember"
            android:buttonTint="@android:color/white"
            android:text="@string/remember"
            android:textColor="@android:color/white"
            android:textSize="18sp"

            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:onClick="ButtonClick"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                style="@style/ButtonBackground"
                android:text="@string/Login" />

            <Button
                android:id="@+id/btnCancelLogin"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:onClick="ButtonClick"
                android:layout_margin="5dp"
                style="@style/ButtonBackground"
                android:text="@string/Cancel" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvForgetPassword"
            android:text="@string/ForgetPassword"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>